i just added some extra designs

--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ p {
   font-size: 22px;
   line-height: 1.5;
   margin-bottom: 15px;
+  /* display: inline; */
 }
 
 ul,
@@ -100,6 +101,7 @@ ol {
 li {
   font-size: 20px;
   margin-bottom: 10px;
+  /* display: inline; */
 }
 
 li:last-child {
@@ -193,9 +195,11 @@ a:active {
 }
 
 nav a:link {
-  background-color: orangered;
+  /* background-color: orangered;
   margin: 20px;
   padding: 20px;
+  display: block; */
 
-  display: block;
+  margin-right: 30px;
+  margin-top: 10px;
 }
