--- a/challenge.css
+++ b/challenge.css
@@ -1,12 +1,13 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   font-family: sans-serif;
   line-height: 1.4;
-  border: 5px solid black;
+  border: 4px solid black;
   width: 825px;
   margin: 50px auto;
 }
@@ -16,6 +17,22 @@ h1 {
   text-transform: uppercase;
   background-color: #f7f7f7;
   padding: 10px 0;
+  position: relative;
+}
+
+h1::before {
+  content: "sale";
+  background-color: red;
+  color: white;
+  font-weight: bold;
+  font-size: 15px;
+  display: inline-block;
+  padding: 5px 5px;
+  letter-spacing: 5px;
+
+  position: absolute;
+  top: -15px;
+  left: -35px;
 }
 
 h2 {
@@ -25,19 +42,65 @@ h2 {
 }
 
 .price {
-  font-weight: bold;
-  font-size: 30px;
+  /* font-weight: bold; */
+  font-size: 24px;
+  float: left;
 }
 
 .shipping {
+  font-size: 12px;
   text-transform: uppercase;
   font-weight: bold;
+  color: black;
   margin-bottom: 20px;
-  margin-top: 30px;
+  float: right;
+  margin-top: 8px;
 }
 
-a {
-  color: black;
+.colors {
+  margin: 10px;
+}
+
+.color-black {
+  background-color: black;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+}
+
+.color-blue {
+  background-color: blue;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+}
+
+.color-red {
+  background-color: red;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+}
+
+.color-yellow {
+  background-color: yellow;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+}
+
+.color-green {
+  background-color: green;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+}
+
+.color-brown {
+  background-color: brown;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
 }
 
 a:hover {
@@ -68,4 +131,29 @@ button {
 button:hover {
   color: black;
   background-color: white;
+}
+
+.product-details {
+  clear: both;
+  margin-bottom: 10px;
+}
+
+img {
+  float: left;
+  margin-right: 40px;
+}
+
+.first {
+  /* background-color: blue; */
+  width: 243px;
+  float: left;
+  margin-right: 40px;
+  margin-top: 20px;
+}
+
+.second {
+  /* background-color: red; */
+  width: 243px;
+  float: left;
+  margin-top: 20px;
 }
