--- a/style.css
+++ b/style.css
@@ -1,14 +1,12 @@
-/*{
-  border-top: 10px solid #1098ad;
-} */
-
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 nav {
   font-size: 18px;
+  text-align: center;
 }
 
 /* div {
@@ -29,7 +27,7 @@ body {
 }
 
 .container {
-  width: 800px;
+  width: 1100px;
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
@@ -54,11 +52,7 @@ aside {
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
-  /* border-right: 5px solid #1098ad; */
-  /* padding-top: 50px;
-  padding-bottom: 50px; */
-  padding: 50px 0;
-  width: 500px;
+  padding: 50px 40px;
 }
 
 /*SMALLER ELEMENT*/
@@ -90,6 +84,7 @@ h4 {
   font-size: 20px;
   text-transform: uppercase;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 p {
@@ -147,6 +142,7 @@ li:last-child {
 
 .related {
   list-style: none;
+  margin-left: 0;
 }
 
 /* body {
@@ -253,5 +249,49 @@ h2::after {
   padding: 5px 10px;
   position: absolute;
   top: -10px;
-  right: -25px;
+  right: -10px;
+}
+
+/* FLOATS */
+.author-img {
+  float: left;
+  margin-bottom: 20px;
+}
+
+.author {
+  float: left;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+h1 {
+  float: left;
+}
+
+nav {
+  float: right;
+}
+
+/* .clear {
+  clear: both;
+} */
+
+.clearfix::after {
+  clear: both;
+  content: "";
+  display: block;
+}
+
+article {
+  width: 750px;
+  float: left;
+}
+
+aside {
+  width: 300px;
+  float: right;
+}
+
+footer {
+  clear: both;
 }
