--- a/challenge.css
+++ b/challenge.css
@@ -44,7 +44,6 @@ h2 {
 .price {
   /* font-weight: bold; */
   font-size: 24px;
-  float: left;
 }
 
 .shipping {
@@ -53,8 +52,6 @@ h2 {
   font-weight: bold;
   color: black;
   margin-bottom: 20px;
-  float: right;
-  margin-top: 8px;
 }
 
 .colors {
@@ -126,27 +123,28 @@ button {
   border-top: 5px solid black;
   border-left: none;
   border-right: none;
+  transition: 3s;
 }
 
 button:hover {
   color: black;
   background-color: white;
+  transition: 3s;
 }
 
 .product-details {
-  clear: both;
   margin-bottom: 10px;
 }
 
 img {
-  float: left;
   margin-right: 40px;
 }
 
-.first {
+.product-info {
   /* background-color: blue; */
   width: 243px;
-  float: left;
+  /* display: flex; */
+
   margin-right: 40px;
   margin-top: 20px;
 }
@@ -154,6 +152,25 @@ img {
 .second {
   /* background-color: red; */
   width: 243px;
-  float: left;
+
   margin-top: 20px;
 }
+
+.product-price {
+  background-color: yellow;
+  display: flex;
+  justify-content: space-between;
+}
+/* .bluey {
+  background-color: red;
+} */
+/* .product-info {
+  display: flex;
+}
+
+.second {
+  display: flex;
+}
+.container {
+  display: flex;
+} */
