--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@ body {
   margin-right: auto; */
   margin: 0 auto;
   /* text-align:center; */
+
+  /* display: flex; */
 }
 
 .main-header {
@@ -183,7 +185,7 @@ a:visited {
 a:hover {
   color: orangered;
   font-weight: bold;
-  text-decoration: underline orangered;
+  text-decoration: underline;
 }
 
 a:active {
@@ -204,7 +206,7 @@ nav a:link {
   display: block; */
 
   margin-right: 30px;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   display: inline-block;
 }
 
@@ -253,6 +255,7 @@ h2::after {
 }
 
 /* FLOATS */
+/*
 .author-img {
   float: left;
   margin-bottom: 20px;
@@ -272,9 +275,9 @@ nav {
   float: right;
 }
 
-/* .clear {
+.clear {
   clear: both;
-} */
+}
 
 .clearfix::after {
   clear: both;
@@ -294,4 +297,67 @@ aside {
 
 footer {
   clear: both;
+}
+*/
+
+.main-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.author-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+  /* justify-content: space-between; */
+}
+
+.author {
+  margin-bottom: 0;
+  margin-left: 15px;
+}
+
+.related-post {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.related-link:link {
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.related-author {
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: italic;
+}
+
+.row {
+  display: flex;
+  align-items: flex-start;
+  gap: 75px;
+  margin-bottom: 60px;
+}
+
+article {
+  flex: 1;
+  margin-bottom: 0;
+}
+
+aside {
+  /*
+  DEFAULTS: 
+  flex-grow:0;
+  flex-shrink:1;
+  flex-basis:auto; 
+  */
+  flex: 0 0 300px;
 }
