floats,flexbox & CSS grid

--- a/challenge.css
+++ b/challenge.css
@@ -130,6 +130,29 @@ button:hover {
   color: black;
   background-color: white;
   transition: 3s;
+  /* transform: translateX(100px); */
+}
+
+/* .butt {
+  transform: scaleX(-1);
+} */
+
+.butt:hover {
+  /* transform: translateX(-200px); */
+  /* transform: scaleX(2); */
+  /* transform: scale(2, 3); */
+  /* transform: rotate(360deg); */
+  transition: 3s;
+  font-style: italic;
+  font-weight: bold;
+  color: blue;
+}
+
+.butt:hover::after {
+  content: "!!";
+  color: red;
+  transition: 3s;
+  font-style: italic;
 }
 
 .product-details {
