--- a/style.css
+++ b/style.css
@@ -300,6 +300,7 @@ footer {
 }
 */
 
+/* FLEXBOX */
 .main-header {
   display: flex;
   align-items: center;
@@ -340,7 +341,8 @@ footer {
   font-style: italic;
 }
 
-.row {
+/* FLEXBOX LAYOUT */
+/* .row {
   display: flex;
   align-items: flex-start;
   gap: 75px;
@@ -353,11 +355,33 @@ article {
 }
 
 aside {
-  /*
+  
   DEFAULTS: 
   flex-grow:0;
   flex-shrink:1;
   flex-basis:auto; 
-  */
+  
   flex: 0 0 300px;
+} */
+
+/* CSS GRID LAYOUTs */
+.container {
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  column-gap: 75px;
+}
+
+.main-header {
+  /* grid-column: 1 / span 2; */
+  grid-column: 1/-1;
+}
+
+article {
+}
+
+aside {
+}
+
+footer {
+  grid-column: 1/-1;
 }
